plugins {
    java
    application
}

group = "com.bdc"
version = "1.0.0-SNAPSHOT"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(project(":core"))
    implementation("com.ibm.icu:icu4j:78.3")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.0")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0")
    implementation("info.picocli:picocli:4.7.5")
    annotationProcessor("info.picocli:picocli-codegen:4.7.5")

    testImplementation(platform("org.junit:junit-bom:5.10.2"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("net.jqwik:jqwik:1.8.2")
    testRuntimeOnly(project(":data"))
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

application {
    mainClass.set("com.bdc.cli.Main")
}

tasks.named<Test>("test") {
    useJUnitPlatform()
    workingDir = rootProject.projectDir
    // Pass system properties to tests
    systemProperty("updateGoldens", System.getProperty("updateGoldens", "false"))
}

tasks.register<Test>("fastTest") {
    description = "Runs tests excluding slow (jqwik) and cross-validation tests"
    group = "verification"

    testClassesDirs = sourceSets.test.get().output.classesDirs
    classpath = sourceSets.test.get().runtimeClasspath

    useJUnitPlatform {
        excludeTags("slow", "cross-validation")
    }
    workingDir = rootProject.projectDir
    // Pass system properties to tests
    systemProperty("updateGoldens", System.getProperty("updateGoldens", "false"))
}

tasks.named<JavaExec>("run") {
    standardInput = System.`in`
    workingDir = rootProject.projectDir
    notCompatibleWithConfigurationCache("uses System.in for interactive input")
}

// Spotless (Google Java Format, UNIX line endings) is configured for every module in the
// root build script.

// Chronology code generation - generated sources go to src/main/java-generated
// This directory is committed to version control so the code is always available
val generatedSourcesDir = projectDir.resolve("src/main/java-generated")

sourceSets {
    main {
        java {
            srcDir(generatedSourcesDir)
        }
    }
}

tasks.register<JavaExec>("generateChronologies") {
    description = "Generates Java chronology classes from YAML specifications"
    group = "build"

    classpath = sourceSets.main.get().runtimeClasspath
    mainClass.set("com.bdc.chronology.codegen.ChronologyCodeGenerator")

    val chronologiesDir = rootProject.projectDir.resolve("chronologies")
    val outputDir = generatedSourcesDir.resolve("com/bdc/chronology/generated")

    args = listOf(chronologiesDir.absolutePath, outputDir.absolutePath)

    inputs.dir(chronologiesDir)
    outputs.dir(generatedSourcesDir)

    doFirst {
        outputDir.mkdirs()
    }

    notCompatibleWithConfigurationCache("JavaExec task that regenerates committed sources")
}

// Note: For bootstrap, run 'gradle compileJava' first without generated sources,
// then 'gradle generateChronologies', then 'gradle compileJava' again.
// After initial setup, generateChronologies can be wired to run before compileJava.

tasks.register("installGitHooks") {
    description = "Installs git pre-commit hook for spotlessApply"
    group = "git hooks"

    doLast {
        val gitDir = rootProject.projectDir.resolve(".git")
        val sourceHook = rootProject.projectDir.resolve("scripts/hooks/pre-commit")

        // Check if .git exists and is a directory (not a file, as in worktrees)
        if (!gitDir.exists()) {
            throw GradleException("Not a git repository: .git directory not found at ${gitDir.absolutePath}")
        }
        if (!gitDir.isDirectory) {
            throw GradleException("Unsupported git setup: .git is not a directory (possibly a worktree). " +
                "Please install hooks manually or run from the main repository.")
        }

        val hooksDir = gitDir.resolve("hooks")
        if (!hooksDir.exists()) {
            hooksDir.mkdirs()
            println("Created hooks directory: ${hooksDir.absolutePath}")
        }

        if (!sourceHook.exists()) {
            throw GradleException("Source hook not found: ${sourceHook.absolutePath}")
        }

        val targetHook = hooksDir.resolve("pre-commit")
        sourceHook.copyTo(targetHook, overwrite = true)
        targetHook.setExecutable(true)
        println("Installed pre-commit hook to ${targetHook.absolutePath}")
    }
}
